# football-stats

./: README.md  pyproject.toml
src/football_stats/: main.py
